# goblin_script

./: .gitignore  readme.md
.claude/worktrees/loving-beaver/: readme.md
goblin-godot/: export_presets.cfg  logic_map.ron  main.tscn  project.godot  rust.gdextension
goblin-godot/assets/sprites/: BODY_skeleton-sm.png.import
goblin-godot/assets/tiles/: logic_tiles.png.import
goblin-godot/assets/tilesets/: tiny_ground.tres  trees.tres
rust/: CLAUDE.md  Cargo.toml  log.txt  prompts.md
rust/crates/benchmark/: Cargo.toml
rust/crates/console_app/: Cargo.toml
rust/crates/game_core/: Cargo.toml
rust/crates/game_core/src/: lib.rs  test_utils.rs
rust/crates/game_core/src/ai/: worker.rs
rust/crates/game_core/src/api/: commands.rs
rust/crates/game_core/src/bt/: blackboard.rs  command.rs  job.rs  leafs.rs  mod.rs  nodes.rs  result.rs  tree.rs  wait.rs
rust/crates/game_core/src/character/: character.rs  command.rs  mod.rs  npc_character.rs  request.rs  scripted_character.rs  snapshot.rs
rust/crates/game_core/src/executor/: command_executor.rs  executor_result.rs  mod.rs
rust/crates/game_core/src/fsm/: idle.rs  mod.rs  run.rs  turn.rs  wait.rs  walk.rs
rust/crates/game_core/src/map/: logic_map.rs  map.rs  mod.rs
rust/crates/game_core/src/math/: directions.rs
rust/crates/godot_app/: Cargo.toml
rust/crates/godot_app/src/: character.rs  debug_overlay.rs  godot_animator.rs  godot_logger.rs  grid_overlay.rs  lib.rs  scene.rs  scripted_character.rs
rust/crates/platform/: Cargo.toml
rust/src/: character.rs  lib.rs  scene.rs
rust/src/bt/: blackboard.rs  (+3 more)
(+237 files in other folders)
