[package]
name = "game_core"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
boa_engine = "0.21.0"
crossbeam = "0.8.4"
lazy_static = "1.5.0"
num_cpus = "1.17.0"
platform = {path = "../platform"}
rayon = "1.11.0"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"]}
